More efficient plugin copy for unit tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ env:
 before_script:
     - export PLUGIN_SLUG=$(basename $(pwd))
     - git clone https://github.com/tierra/wordpress.git /tmp/wordpress
-    - mkdir -p "/tmp/wordpress/src/wp-content/plugins/$PLUGIN_SLUG"
-    - cp -vR . "/tmp/wordpress/src/wp-content/plugins/$PLUGIN_SLUG"
+    - git clone . "/tmp/wordpress/src/wp-content/plugins/$PLUGIN_SLUG"
     - cd /tmp/wordpress
     - git checkout $WP_VERSION
     - mysql -e "CREATE DATABASE wordpress_tests;" -uroot
