Minimize the Travis test matrix configurations.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,18 +3,19 @@
 # Tell Travis CI we're using PHP
 language: php
 
-# Versions of PHP to test against
-php:
-    - "5.2"
-    - "5.3"
-    - "5.4"
-    - "5.5"
-
-# Specify versions of WordPress to test against (requires 3.8+)
-# WP_VERSION is the WordPress tagged version (use "master" for SVN trunk)
-env:
-    - WP_VERSION=master
-    - WP_VERSION=3.8
+# Define our matrix of build configurations to test against.
+# WP_VERSION specifies the tag to use. The way these tests are configured to run
+# requires at least WordPress 3.8. Specify "master" to test against SVN trunk.
+matrix:
+  include:
+    - php: "5.2"
+      env: WP_VERSION=3.8
+    - php: "5.4"
+      env: WP_VERSION=3.8
+    - php: "5.3"
+      env: WP_VERSION=master
+    - php: "5.5"
+      env: WP_VERSION=master
 
 # Clones WordPress and configures our testing environment.
 before_script:
