--- a/.travis.yml
+++ b/.travis.yml
@@ -3,16 +3,31 @@
 # Tell Travis CI we're using PHP
 language: php
 
-# Default WordPress version that will be used if not specified.
+# Primary PHP version that will be used if not specified in build matrix.
+php:
+    - "5.3"
+
+# Primary WordPress version that will be used if not specified in build matrix.
 env:
     - WP_VERSION=master
 
-# Define our matrix of build configurations to test against.
+# Next we define our matrix of build configurations to test against. The
+# defaults listed above will automatically build our first primary test
+# environment, so it doesn't need to be re-defined below.
+
 # WP_VERSION specifies the tag to use. The way these tests are configured to run
 # requires at least WordPress 3.8. Specify "master" to test against SVN trunk.
+
+# Note that Travis CI supports listing these above to automatically build a
+# matrix of configurations, but we're being nice here by manually building a
+# total of four configurations even though we're testing 4 versions of PHP
+# along with 2 versions of WordPress (which would build 8 configs otherwise).
+# This takes half as long to run while still covering nearly everything.
+
 matrix:
   include:
-    - php: "5.5" # This will default to "master" version of WordPress
+    - php: "5.5"
+      env: WP_VERSION=master
     - php: "5.4"
       env: WP_VERSION=3.8
     - php: "5.2"
